--- a/data-app/tsconfig.json
+++ b/data-app/tsconfig.json
@@ -25,7 +25,9 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "stripInternal": true,
-    "target": "ES2019"
+    "target": "ES2019",
+    "exactOptionalPropertyTypes": false,
+    "noPropertyAccessFromIndexSignature": false
   },
   "include": [
     "src/**/*.ts"
