--- a/data-app/package.json
+++ b/data-app/package.json
@@ -24,8 +24,15 @@
     "eslint-plugin-import": "^2.30.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
+    "prisma": "^5.20.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "node-fetch": "^3.3.2",
+    "xml-js": "^1.6.11",
+    "zod": "^3.23.8"
   },
   "license": "Apache-2.0",
   "publishConfig": {
