--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ jspm_packages/
 .yarn-integrity
 .cache
 .tmp
+game-collection-data.code-workspace
 !/.github/workflows/build.yml
 !/.mergify.yml
 !/.github/workflows/upgrade.yml
