--- a/data-app/tsconfig.json
+++ b/data-app/tsconfig.json
@@ -3,11 +3,18 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "lib",
+    "esModuleInterop": true,
+    "lib": [
+      "es2022"
+    ],
     "module": "es2022",
+    "target": "es2022",
     "exactOptionalPropertyTypes": false,
     "noPropertyAccessFromIndexSignature": false,
-    "moduleResolution": "bundler",
-    "noEmit": true
+    "moduleResolution": "node",
+    "noUncheckedIndexedAccess": true,
+    "noEmit": true,
+    "verbatimModuleSyntax": true
   },
   "include": [
     "src/**/*.ts"
