--- a/data-app/.gitignore
+++ b/data-app/.gitignore
@@ -32,6 +32,8 @@ src/data/*
 /test-reports/
 junit.xml
 /coverage/
+!/.prettierignore
+!/.prettierrc.json
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
@@ -39,5 +41,9 @@ junit.xml
 /lib
 /dist/
 !/.eslintrc.json
+!/.nvmrc
+!/.vscode/settings.json
+!/.vscode/extensions.json
+/assets/
 !/project.json
 !/LICENSE
