--- a/data-app/.npmignore
+++ b/data-app/.npmignore
@@ -3,6 +3,8 @@
 /test-reports/
 junit.xml
 /coverage/
+/.prettierignore
+/.prettierrc.json
 /test/
 /tsconfig.dev.json
 /src/
@@ -17,4 +19,5 @@ dist
 /.projenrc.js
 tsconfig.tsbuildinfo
 /.eslintrc.json
+!/assets/
 /.gitattributes
