Working Version -- Pushing so Rob can see what's going on

--- a/data-app/tsconfig.json
+++ b/data-app/tsconfig.json
@@ -36,7 +36,7 @@
     "skipLibCheck": true,
     "moduleResolution": "node",
     "noEmit": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
     "checkJs": true
